# tuts

pydantic-ai-masterclass/: .gitignore  pyproject.toml
pydantic-ai-masterclass/7-dependency-injection/: 7.1-hello-world.py
pydantic-ai-masterclass/logs/: CareerCoachAI_customer_service_2025-02-18_072103.json  CareerCoachAI_jockey_2025-02-18_072011.json  CareerCoachAI_nurse_2025-02-18_071952.json  CareerCoachAI_software_engineer_2025-02-18_072029.json
